# klustre-csi-plugin

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cliff.toml
.github/workflows/: build-and-push.yaml  ci.yaml  release-on-tag.yaml
deploy/kubernetes/: README.md
deploy/kubernetes/base/: csi-driver.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  storageclass-pv.yaml
deploy/kubernetes/overlays/example/: kustomization.yaml
manifests/: clusterrole-klustre-csi-node.yaml  configmap-klustre-csi-settings.yaml  csidriver-lustre.csi.klustrefs.io.yaml  daemonset-klustre-csi-node.yaml  kustomization.yaml  namespace.yaml  serviceaccount-klustre-csi-node.yaml  storageclass-klustre-static.yaml
src/: config.rs  csi_types.rs  main.rs  server.rs
src/lustre/: client.rs  mod.rs  mount.rs
src/services/: controller.rs  identity.rs  mod.rs  node.rs
src/utils/: path.rs
