[package]
name = "klustrefs-csi-plugin"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "klustrefs-csi-plugin"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "process"] }

# gRPC
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
prost-types = "0.14"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }

# Configuration and CLI
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
tokio-stream = "0.1"
tracing-error = "0.2.1"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
